<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    tools:context=".workInfo">

    <TextView
        android:id="@+id/textView30"
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:fontFamily="@font/robotobolditalic"
        android:text="@string/textProf2"
        android:textColor="@color/customBlack"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.136" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="46dp"
        android:text="@string/txtcomNameW"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />

    <EditText
        android:id="@+id/comWorkername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/comNameProfile"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView31"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView31" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="32dp"
        android:text="@string/locationProfile"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView31" />

    <EditText
        android:id="@+id/workInfoCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/locationWorkerP"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView32"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="32dp"
        android:text="@string/serviceProfile"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView32" />

    <EditText
        android:id="@+id/workInfoServices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/seviceWorkP"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView33"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="32dp"
        android:text="@string/hrateWorkerProf"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView33"
        tools:text="@string/hratetxtwork" />

    <EditText
        android:id="@+id/workInfoHrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/rateProfile"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView34"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/workInfoAddDetail"
        android:layout_width="153dp"
        android:layout_height="42dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/button"
        android:fontFamily="@font/cairolight"
        android:text="@string/addWorkInfo"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/workInfoUpdateDetail"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workInfoHrate" />

    <Button
        android:id="@+id/workInfoUpdateDetail"
        android:layout_width="153dp"
        android:layout_height="42dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/button"
        android:fontFamily="@font/cairolight"
        android:text="@string/updateWorkinfo"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workInfoHrate" />

    <Button
        android:id="@+id/workInfoDeleteDetails"
        android:layout_width="153dp"
        android:layout_height="42dp"
        android:layout_marginTop="27dp"
        android:text="@string/workInDelbtn"
        android:background="@drawable/button"
        android:fontFamily="@font/cairolight"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workInfoAddDetail" />

</androidx.constraintlayout.widget.ConstraintLayout>